Bug 993936 - Make check for continuing session stricter. r=smaug